--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.0",
+    "vis-network": "^9.1.9",
+    "vis-data": "^7.1.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.48",
