--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ __init__.py
 
 # Ignore a specific filename (e.g. xyz.py) anywhere in the project
 graph_metadata
+
+# IMPORTANT: Ignore .env files (contains API keys!)
+.env
+*.env
+backend/.env
