Add research-grade features and fix tooltip positioning
- Added ResearchInsights component with 13 advanced metrics
- Implemented hover tooltips with formulas and calculations
- Fixed tooltip positioning to prevent cutoff
- Added research report generation (DOCX export)
- Updated carbon grey theme with proper text visibility
- Added mathematical definitions with interactive help
- Included comprehensive documentation files

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,7 @@ python-multipart==0.0.6
 scipy==1.11.4
 requests==2.31.0
 python-dotenv==1.0.0
+python-docx==1.1.0
 
 # Optional: For better graph layouts (requires C++ compiler on Windows)
 # If installation fails, the app will use networkx spring_layout instead
