--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,80 @@
-# Ignore all __pycache__ folders
+# Python
 __pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+venv/
+ENV/
+env/
+.venv
 
-# Ignore all .pyc and .pyo files (compiled Python)
-*.pyc
-*.pyo
-
-# Ignore all __init__.py files everywhere
-__init__.py
-
-# Ignore a specific filename (e.g. xyz.py) anywhere in the project
-graph_metadata
-
-# IMPORTANT: Ignore .env files (contains API keys!)
+# Environment variables
 .env
 *.env
 backend/.env
 
-# Test files that access API keys
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
 test_*.py
 
-# Research Papers folder (PDF academic papers)
+# Neo4j
+neo4j/
+
+# Research Papers (private)
 Research Papers/
+
+# Generated datasets
+DAG_Dataset/
+Benchmark_Results/
+
+# Generated files
+*.png
+*.jpg
+*.jpeg
+graph_metadata/
+graphs/
+
+# Temporary files
+tradeoff.docx
+
+# Scripts
+benchmark_dags.py
+generate_dag_dataset.py
+
+# Old documentation (moved to docs/)
+QUICK_START.md
+ADVANCED_RESEARCH_FEATURES.md
+RESEARCH_FEATURES_SUMMARY.md
