refactor: remove redundant files and add scripts to gitignore
REMOVED FROM GIT:
- scripts/ folder (generation utilities kept locally but not in repo)
  * generate_documentation.py
  * generate_challenges_doc.py
  * generate_ml_research_paper.py
  * generate_research_paper_pip.py
  * benchmark_dags.py
  * README.md

REASON:
Scripts are internal development utilities for generating documentation
and running benchmarks. Not needed in public repository.

UPDATED:
- .gitignore: Added scripts/ to ignore list
- docs/PROJECT_STRUCTURE.md: Removed scripts/ section
- docs/REFACTORING_COMPLETE.md: Added note that scripts/ is now private

RESULT:
Cleaner repository with only essential files for users and contributors.
Scripts remain available locally for maintenance but not cluttering repo.

--- a/.gitignore
+++ b/.gitignore
@@ -70,7 +70,8 @@ graphs/
 # Temporary files
 tradeoff.docx
 
-# Scripts
+# Scripts (generation utilities - not for distribution)
+scripts/
 benchmark_dags.py
 generate_dag_dataset.py
 
