Remove frontend/backend, focus on research: Streamlit demo + pip package
- Removed React/TypeScript frontend (entire folder)
- Removed FastAPI backend (entire folder)
- Updated Streamlit demo app with all research features
- Added ML workflow templates (ML Pipeline, LangGraph, Distributed Training, Feature Engineering)
- Updated documentation (README, PROJECT_STRUCTURE, QUICK_START, CHANGELOG)
- Separated dependencies: requirements.txt (library) and requirements-demo.txt (demo)
- Updated .gitignore and MANIFEST.in to remove Node.js references
- Architecture shift: User â†’ Streamlit â†’ dagoptimizer library (direct)
- 80% code reduction, single Python stack, library-first positioning

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,6 +5,10 @@ include CONTRIBUTING.md
 include CODE_OF_CONDUCT.md
 include CHANGELOG.md
 include requirements.txt
+include requirements-demo.txt
+
+# Include demo application
+include app.py
 
 # Include all markdown documentation
 recursive-include docs *.md
@@ -19,16 +23,18 @@ recursive-exclude * .DS_Store
 recursive-exclude * .git*
 exclude .gitignore
 
-# Exclude development files
+# Exclude development/generated files
 exclude .env
 exclude .env.*
+exclude *.png
+exclude *.jpg
+exclude *.jpeg
 recursive-exclude tests *
-recursive-exclude backend *
-recursive-exclude frontend *
 recursive-exclude scripts *
 recursive-exclude Research\ Papers *
 recursive-exclude DAG_Dataset *
 recursive-exclude Benchmark_Results *
 recursive-exclude graph_metadata *
 recursive-exclude graphs *
+recursive-exclude notebooks *
 
