Add 3 comprehensive demo scripts with full documentation
- Created scripts/01_quick_start_demo.py (8 examples with terminal output)
- Created scripts/02_benchmark_analysis.py (995 DAG analysis with statistics)
- Created scripts/03_metrics_explained.py (25+ metrics with formulas)
- Updated scripts/README.md with detailed documentation
- Moved notebooks/ to gitignore (focused on Python scripts)
- Removed scripts/ from gitignore to include demos
- Fixed Unicode arrows for Windows compatibility
- All scripts tested and syntax-checked

--- a/.gitignore
+++ b/.gitignore
@@ -63,8 +63,10 @@ optimization_metadata.json
 # Temporary files
 tradeoff.docx
 
-# Scripts (generation utilities - not for distribution)
-scripts/
+# Notebooks (can be created from scripts)
+notebooks/
+
+# Temporary generation files (keep scripts/ for demo)
 benchmark_dags.py
 generate_dag_dataset.py
 
